// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderInlineEndColor renders 0 1`] = `
Array [
  .c0 {
  border-inline-end-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: #0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndColor renders function 1`] = `
Array [
  .c0 {
  border-inline-end-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndColor renders invalid theme path 1`] = `
Array [
  .c0 {
  border-inline-end-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndColor renders negative number 1`] = `
Array [
  .c0 {
  border-inline-end-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: #-42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: #-42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-inline-end-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-inline-end-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-inline-end-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-inline-end-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndColor renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-inline-end-color: July;
  }
}

@media April {
  .c0 {
    border-inline-end-color: August;
  }
}

@media January {
  .c0 {
    border-inline-end-color: September;
  }
}

@media April {
  .c0 {
    border-inline-end-color: November;
  }
}

@media June {
  .c0 {
    border-inline-end-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-inline-end-color: July;
  }
}

@media April {
  .c0 {
    border-inline-end-color: August;
  }
}

@media January {
  .c0 {
    border-inline-end-color: September;
  }
}

@media April {
  .c0 {
    border-inline-end-color: November;
  }
}

@media June {
  .c0 {
    border-inline-end-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-end-color: January;
  }
}

@media April {
  .c0 {
    border-inline-end-color: December;
  }
}

@media January {
  .c0 {
    border-inline-end-color: April;
  }
}

@media April {
  .c0 {
    border-inline-end-color: May;
  }
}

@media June {
  .c0 {
    border-inline-end-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-inline-end-color: January;
  }
}

@media April {
  .c0 {
    border-inline-end-color: December;
  }
}

@media January {
  .c0 {
    border-inline-end-color: April;
  }
}

@media April {
  .c0 {
    border-inline-end-color: May;
  }
}

@media June {
  .c0 {
    border-inline-end-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndColor renders postitive number 1`] = `
Array [
  .c0 {
  border-inline-end-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: #42365;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: #42365;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndColor renders string 1`] = `
Array [
  .c0 {
  border-inline-end-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderInlineEndColor renders valid theme path 1`] = `
Array [
  .c0 {
  border-inline-end-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-inline-end-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
